--- a/inst/rmd/post_material.Rmd
+++ b/inst/rmd/post_material.Rmd
@@ -798,7 +798,9 @@ The Ministry of Health also studied tanning behaviors. They estimated the annual
 
 Skin cancer resolves within one year of diagnosis, with 7% of cases resulting in death. Those who recover following a skin cancer diagnosis nearly all quit tanning, though they re-initiate indoor tanning at the same rate as their peers who have not experienced skin cancer.
 
-The Ontario Ministry of Health is considering an indoor tanning ban for those 18 years of age and younger (reducing the rate of tanning initiation to zero among this age group). They are also considering a full indoor tanning ban, which would reduce the rate of tanning initiation to zero for everyone in Ontario. They would like to evaluate the impact that each of these policies would have over the lifetime of a cohort of 10-year-old girls. The Ministry of Health does not wish to discount outcomes.
+The Ontario Ministry of Health is considering an indoor tanning ban for those 18 years of age and younger (reducing the rate of tanning initiation to zero among this age group). They are also considering a full indoor tanning ban, which would reduce the rate of tanning initiation to zero for everyone in Ontario. 
+
+However, indoor tanning ban would result in reduced demand for indoor tanning and decrease the number of employees hired in these facilities (there are currently about 1000 employees in the industry). Indoor tanning ban among women younger than 18 year-old would reduce the employmenet by 10% in the industry. A full indoor tanning ban would reduce the employmenet by 80%. We assume that the average annual salary of an employee is 28,000 Canadian dollars. The Ontario Ministry of Health would like to conduct cost-effectiveness analysis for the health benefit over the lifetime of a cohort of 10-year-old girls by considering the cost. The Ministry of Health does not wish to discount outcomes.
 
 1. Draw a Markov model diagram of tanning behavior and skin cancer that the Ontario Ministry of Health could use to evaluate their tanning policies in terms of the desired outcomes. Use a yearly time step. Include the following states: "Non-tanners", "Regular tanners", "Skin cancer", "Dead from skin cancer", and "Dead from other causes". Label all transition probabilities and indicate which are changing over time.
 
@@ -837,9 +839,9 @@ Before doing any actual coding:
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
 library(kableExtra)
 
-input_table <- data.frame("parameter code" = c("p_init_tan", "p_halt_tan", "p_nontan_to_cancer", "p_regtan_to_cancer", "p_cancer_to_dead", "p_mort"), 
-                          "definition" = c("probability of initiating tanning", "probability of discontinuing tanning", "probability of having skin cancer among non-tanners", "probability of having skin cancer among regular tanners", "probability of cancer-specific death", "probability of natural death"), 
-                          "data type" = c("table", "table", "constant", "constant", "constant", "table"))
+input_table <- data.frame("parameter code" = c("p_init_tan", "p_halt_tan", "p_nontan_to_cancer", "p_regtan_to_cancer", "p_cancer_to_dead", "p_mort", "n_worker", "salary", "target_red", "universal_red"), 
+                          "definition" = c("probability of initiating tanning", "probability of discontinuing tanning", "probability of having skin cancer among non-tanners", "probability of having skin cancer among regular tanners", "probability of cancer-specific death", "probability of natural death", "number of workers", "average salary of tanning workers", "reduction of workers under targeted ban", "reduction of workers under universal ban"), 
+                          "data type" = c("table", "table", "constant", "constant", "constant", "table", "constant", "constant", "constant", "constant"))
 
 kable(input_table, col.names=c("parameter code", "definition", "data type")) %>% 
   kable_styling(full_width = F, position = "center") 
@@ -864,6 +866,10 @@ print(head(behavior))
 p_nontan_to_cancer <- 0.005
 p_regtan_to_cancer <- 0.04
 p_cancer_to_dead <- 0.07
+n_worker <- 1000
+salary <- 28000
+target_red <- 0.1
+universal_red <- 0.8
 ```
 
 * In addition, we have other required variables 
@@ -884,6 +890,10 @@ v_init <- c(1, 0, 0, 0, 0)
 l_param_all <- list(p_nontan_to_cancer = 0.005,
                     p_regtan_to_cancer = 0.04,
                     p_cancer_to_dead = 0.07, 
+                    n_worker = 1000, 
+                    salary = 28000, 
+                    target_red = 0.1,
+                    universal_red = 0.8, 
                     ltable = ltable,
                     behavior = behavior, 
                     state_names = c("nontan", "regtan", "cancer", "deadnature", "deadcancer"),
@@ -902,10 +912,10 @@ ages <- c(10 : (10 + n_t - 1))
 p_mort <- ltable$qx[match(ages, ltable$age)]
 
 # We modify the values of tanning behavior based on strategy of interest.
-if (strategy == "targeted ban") {
+if (strategy == "targeted_ban") {
   behavior$p_init_tanning[behavior$age <= 18] <- 0
 }
-if (strategy == "universal ban") {
+if (strategy == "universal_ban") {
   behavior$p_init_tanning <- 0
 }
 
@@ -924,10 +934,10 @@ ages <- c(10 : (10 + n_t - 1))
 p_mort <- ltable$qx[match(ages, ltable$age)]
 
 # # We modify the values of tanning behavior based on strategy of interest.
-# if (strategy == "targeted ban") {
+# if (strategy == "targeted_ban") {
 #   behavior$p_init_tanning[behavior$age <= 18] <- 0
 # }
-# if (strategy == "universal ban") {
+# if (strategy == "universal_ban") {
 #   behavior$p_init_tanning <- 0
 # }
 
@@ -1048,19 +1058,35 @@ for(t in 1 : n_t){
 
 ### Step 5. Organize outputs
 
-* The outcome in this example is "expected life years" (`LE`). Therefore, we remove the last two columns.
-  
+* The outcome in this example is "expected life years" (`LE`) and total cost due to laying off workers in the industry. 
+
+
+    + Calculate the cost associated with each strategy
     + Calculate the sums by each row for the remaining columns. 
     + Calculate the life expectancy by summing up all the values. 
+
 
 * We organize the output in a `data.frame` with the strategy in the first column and `LE` as the second column. 
 * You could add more columns to the `data.frame` if you have more outcomes of interest (e.g., cost) 
 
-```{r}
+```{r, eval = F}
 #### 5. Organize outputs
-LE <- sum(rowSums(trace_mat[, -c(4, 5)])) - 1
-output <- data.frame("strategy" = "null",
-                     "LE" = LE)
+# Cost
+tot_cost <- 0 # if there is no tanning ban
+if (strategy == "targeted_ban") {
+  tot_cost <- n_worker * target_red * salary
+}
+if (strategy == "universal_ban") {
+  tot_cost <- n_worker * universal_red * salary
+}
+
+# Life expectancy
+LE <- sum(rowSums(trace_mat[, !grepl("dead", state_names)])) - 1
+
+# Output table
+output <- data.frame("strategy" = strategy,
+                     "LE" = LE,
+                     "Cost" = tot_cost)
 ```
 
 ### Step 6. Return the relevant outputs
@@ -1094,12 +1120,12 @@ print(markov_model)
 
 * Notice that the `markov_model()` function has another argument `strategy`. 
 * Specifying different strategy produces different life expectancy. 
-* In our example, there are three types of strategies: "null", "targeted ban", "universal ban". The default value is NULL, which means null strategy. 
+* In our example, there are three types of strategies: "null", "targeted_ban", "universal_ban". The default value is NULL, which means null strategy. 
 
 ```{r}
 print(markov_model(l_param_all = l_param_all, strategy = "null"))
-print(markov_model(l_param_all = l_param_all, strategy = "targeted ban"))
-print(markov_model(l_param_all = l_param_all, strategy = "universal ban"))
+print(markov_model(l_param_all = l_param_all, strategy = "targeted_ban"))
+print(markov_model(l_param_all = l_param_all, strategy = "universal_ban"))
 ```
 
 * In our example, the strategy is modifying the probability of initiating tanning. Therefore, we program the effect of strategy at step 1. 
@@ -1118,7 +1144,11 @@ print(markov_model(l_param_all = l_param_all, strategy = "universal ban"))
 ```{r}
 vary_param_ls <- list(p_nontan_to_cancer = 0.005,
                       p_regtan_to_cancer = 0.04,
-                      p_cancer_to_dead = 0.07)
+                      p_cancer_to_dead = 0.07, 
+                      n_worker = 1000, 
+                      salary = 28000, 
+                      target_red = 0.1,
+                      universal_red = 0.8)
 
 other_input_ls <- list(ltable = ltable,
                        behavior = behavior,
@@ -1128,22 +1158,47 @@ other_input_ls <- list(ltable = ltable,
 res <- markov_decision_wrapper(vary_param_ls = vary_param_ls,
                                other_input_ls = other_input_ls,
                                userfun = markov_model,
-                               strategy_set = c("null", "targeted ban", "universal ban"))
+                               strategy_set = c("null", "targeted_ban", "universal_ban"))
 print(res)
 ```
+
+* CEA results
+
+```{r}
+tan_icer <- calculate_icers(res$Cost,
+                            res$LE,
+                            res$strategy)
+print(tan_icer)
+plot(tan_icer)
+```
+
 
 * We can change the values in the `l_param_all` easily. 
 
 ```{r}
 vary_param_ls <- list(p_nontan_to_cancer = 0.005,
-                      p_regtan_to_cancer = 0.08,
-                      p_cancer_to_dead = 0.1)
+                      p_regtan_to_cancer = 0.2,
+                      p_cancer_to_dead = 0.1, 
+                      n_worker = 1000, 
+                      salary = 28000, 
+                      target_red = 0.1,
+                      universal_red = 0.8)
 
 res <- markov_decision_wrapper(vary_param_ls = vary_param_ls,
                                other_input_ls = other_input_ls,
                                userfun = markov_model,
-                               strategy_set = c("null", "targeted ban", "universal ban"))
+                               strategy_set = c("null", "targeted_ban", "universal_ban"))
 print(res)
+```
+
+* CEA results
+
+```{r}
+tan_icer <- calculate_icers(res$Cost,
+                            res$LE,
+                            res$strategy)
+print(tan_icer)
+plot(tan_icer)
 ```
 
 
@@ -1281,7 +1336,11 @@ behavior <- ONtan$behavior
 
 vary_param_ls <- list(p_nontan_to_cancer = 0.005,
                       p_regtan_to_cancer = 0.04,
-                      p_cancer_to_dead = 0.07)
+                      p_cancer_to_dead = 0.07, 
+                      n_worker = 1000, 
+                      salary = 28000, 
+                      target_red = 0.1,
+                      universal_red = 0.8)
 
 other_input_ls <- list(ltable = ltable, 
                        behavior = behavior, 
@@ -1292,25 +1351,27 @@ other_input_ls <- list(ltable = ltable,
 res <- markov_decision_wrapper(vary_param_ls = vary_param_ls, 
                         other_input_ls = other_input_ls, 
                         userfun = markov_model, 
-                        strategy_set = c("null", "targeted ban", "universal ban"))
+                        strategy_set = c("null", "targeted_ban", "universal_ban"))
 
 params_range <- data.frame(pars = c("p_regtan_to_cancer", "p_cancer_to_dead"), 
                            min = c(0.01, 0.01), 
                            max = c(0.1, 0.1))
 
-owsa_out <- run_owsa_det(params_range, vary_param_ls, nsamp = 100, 
+owsa_out <- run_owsa_det(params_range, 
+                         vary_param_ls, 
+                         nsamp = 100, 
                          FUN = markov_decision_wrapper, 
                          userfun = markov_model, 
                          other_input_ls = other_input_ls, 
-                         strategy_set = c("null", "targeted ban", "universal ban"))
-plot(owsa_out)
+                         strategy_set = c("null", "targeted_ban", "universal_ban"))
+plot(owsa_out$owsa_LE)
 
 twsa_out <- run_twsa_det(params_range, vary_param_ls, nsamp = 10, 
                          FUN = markov_decision_wrapper, 
                          userfun = markov_model, 
                          other_input_ls = other_input_ls, 
-                         strategy_set = c("null", "targeted ban", "universal ban"))
-plot(twsa_out)
+                         strategy_set = c("null", "targeted_ban", "universal_ban"))
+plot(twsa_out$twsa_LE)
 ```
 
 
