--- a/inst/rmd/post_material.Rmd
+++ b/inst/rmd/post_material.Rmd
@@ -1019,10 +1019,10 @@ print(tr_mat[, , "50"])
 
 ```{r}
 # Check whether the transition matrices have any negative values or values > 1!!!
-if (sum(tr_mat > 1) | sum(tr_mat < 0)) stop("there are invalid transition probabilities")
+if (any(tr_mat > 1 | tr_mat < 0)) stop("there are invalid transition probabilities")
 
 # Check whether each row of a transition matrix sum up to 1!!!
-if (any(rowSums(t(apply(tr_mat, 3, rowSums))) != n_states)) stop("transition probabilities do not sum up to one")
+if (any(round(apply(tr_mat, 3, rowSums), 5) != 1)) stop("transition probabilities do not sum up to one")
 ```
 
 ### Step 3. Create the trace matrix and outcome matrix 
@@ -1314,7 +1314,6 @@ plot(twsa_out$twsa_Cost)
 
 ## Probabilistic sensitivity analysis
 
-`r text_spec("Need discussion!!", background = "#D05A6E", color = "white", bold = T)`
 
 ### Generate your PSA samples
 
